Revert "BUGFIX: Prevent label from wrapping"
This reverts commit c6c0778845671378f2d166f9cfb0cc926297f907.

--- a/packages/react-ui-components/src/CheckBox/style.css
+++ b/packages/react-ui-components/src/CheckBox/style.css
@@ -1,7 +1,7 @@
 .checkbox {
     composes: reset from './../reset.css';
     position: relative;
-    display: inline-block;
+    display: block;
     width: 20px;
     height: 20px;
     margin-right: 8px;
